--- a/src/components/Card/index.module.css
+++ b/src/components/Card/index.module.css
@@ -1,5 +1,8 @@
 .card {
-  border: 1px solid black;
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
+  background-color: #ffffff;
   padding: 10px;
 }
 p {
