--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,6 @@ body,
   width: 100%;
   min-height: 100vh;
   height: 100%;
-  background-color: rgb(152, 194, 223);
 }
 
 .top {
@@ -23,6 +22,7 @@ body,
   width: 100%;
   position: fixed;
   top: 0;
+  z-index: 5;
   background-color: #111;
   display: flex;
   flex-direction: row;
@@ -31,12 +31,13 @@ body,
 }
 
 .bottom {
-  height: 100%;
-  padding-top: 100px;
+  min-height: 100%;
+  padding: 180px 20px 80px;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  background-color: rgb(152, 194, 223);
 }
 
 .input,
@@ -58,6 +59,12 @@ body,
   cursor: pointer;
   width: 50px;
   height: 50px;
+  transition: all 350ms;
+}
+.button:hover {
+  transition: all 0.5s;
+  box-shadow: rgba(63, 105, 153, 0.35) 0 -25px 18px -14px inset;
+  transform: scale(1.03);
 }
 
 .img-search {
