--- a/src/components/Card/index.module.css
+++ b/src/components/Card/index.module.css
@@ -1,10 +1,31 @@
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 220px;
+  height: 240px;
   -webkit-box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
-  -moz-box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(80, 34, 78, 0.2);
   box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
   background-color: #ffffff;
-  padding: 10px;
+  padding: 15px;
 }
 p {
-  margin: 5px;
+  margin: 0;
+}
+.image {
+  height: 110px;
+  align-self: center;
+}
+.title {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 3px;
+}
+.brand {
+  font-size: 13px;
+  margin-bottom: 3px;
+}
+.price {
+  color: #555555;
 }
