--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+
 html,
 body,
 #root {
@@ -6,7 +8,7 @@ body,
   height: 100%;
   margin: 0;
 
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Lato', Verdana, Geneva, Tahoma, sans-serif;
 }
 * {
   box-sizing: border-box;
@@ -34,9 +36,9 @@ body,
   min-height: 100%;
   padding: 180px 20px 80px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   background-color: rgb(152, 194, 223);
 }
 
