--- a/src/components/Card/index.module.css
+++ b/src/components/Card/index.module.css
@@ -9,6 +9,8 @@
   box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
   background-color: #ffffff;
   padding: 15px;
+
+  cursor: pointer;
 }
 p {
   margin: 0;
