--- a/src/components/Pagination/index.module.css
+++ b/src/components/Pagination/index.module.css
@@ -1,6 +1,6 @@
 .pagination {
   position: relative;
-  height: 60px;
+  height: 50px;
   background: rgba(255, 255, 255, 0.432);
   display: flex;
   align-items: center;
@@ -12,7 +12,7 @@
   list-style-type: none;
   display: inline-block;
   position: relative;
-  padding: 20px 25px;
+  padding: 15px;
   text-decoration: none;
   color: #ffffff;
   font-weight: 500;
@@ -27,4 +27,17 @@
 .pagination li:hover,
 .pagination li.active {
   background: rgba(255, 255, 255, 0.2);
+}
+
+.product_count {
+  color: white;
+  position: absolute;
+  right: 20px;
+}
+.product_count_btn {
+  background-color: rgb(170, 170, 170);
+  cursor: pointer;
+}
+.product_count_btn.active {
+  background-color: rgb(91, 139, 137);
 }
