--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,16 @@ body,
 * {
   box-sizing: border-box;
 }
+.wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  min-height: 100vh;
+}
 .container {
   width: 100%;
-  min-height: 100vh;
   height: 100%;
+  flex: 0 1 auto;
 }
 
 .top {
@@ -33,7 +39,7 @@ body,
 }
 
 .bottom {
-  min-height: 100%;
+  min-height: 100vh;
   padding: 180px 20px 80px;
   display: flex;
   flex-direction: column;
